# telemetrix

./: .gitignore  404.html  MANIFEST.in  README.md  about.html  contents.html  debug.html  device_writes.html  dht.html  enable_disable.html  i2c.html  index.html  init.html  install_telemetrix-aio.html  install_telemetrix.html  license.html  management.html  mkdocs.yml  pin_modes.html  pypi_desc.md  pyproject.toml  python_3_verify.html  python_install.html  setup.py  sitemap.xml  telemetrix4arduino.html  telemetrix4esp8266.html  telemtrix4arduinoSAVE.html  upgrade.html
about/: index.html
arduino_sketches/: README.md
contents/: index.html
debug/: index.html
device_writes/: index.html
dht/: index.html
docs/: about.md  contents.md  debug.md  device_writes.md  dht.md  enable_disable.md  extend.md  i2c.md  index.md  init.md  install_telemetrix-aio.md  install_telemetrix.md  management.md  onewire.md  pin_modes.md  pins.md  python_3_verify.md  python_install.md  spi.md  stepper.md  telemetrix4arduino.md  telemetrix4esp8266.md  upgrade.md
enable_disable/: index.html
examples/: DC_motor&servo_test_class.py  analog_input.py  analog_input_scan_interval.py  blink.py  dht.py  digital_input.py  digital_input_pullup.py  fade.py  hc-sr04_distance_sensor.py  i2c_adxl345_accelerometer.py  i2c_adxl345_accelerometer2.py  loop_back.py  onewire_ds18x20.py  servo.py  sonar_disable.py  spi_adxl345_accelerometer.py  spi_bme280.py  spi_mpu9250.py  stepper_absolute.py  stepper_continuous.py  stepper_relative.py  stepper_run_speed_to_position.py  stepper_set_and_get.py
(+94 files in other folders)
